; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_tsd.c_tsd_state_compute.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_tsd.c_tsd_state_compute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@malloc_slow = common dso_local global i64 0, align 8
@tsd_state_nominal_slow = common dso_local global i32 0, align 4
@tsd_state_nominal = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @tsd_state_compute to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tsd_state_compute(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @tsd_nominal(i32* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @tsd_state_get(i32* %8)
  store i32 %9, i32* %2, align 4
  br label %24

10:                                               ; preds = %1
  %11 = load i64, i64* @malloc_slow, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %20, label %13

13:                                               ; preds = %10
  %14 = load i32*, i32** %3, align 8
  %15 = call i64 @tsd_local_slow(i32* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %20, label %17

17:                                               ; preds = %13
  %18 = call i64 (...) @tsd_global_slow()
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %17, %13, %10
  %21 = load i32, i32* @tsd_state_nominal_slow, align 4
  store i32 %21, i32* %2, align 4
  br label %24

22:                                               ; preds = %17
  %23 = load i32, i32* @tsd_state_nominal, align 4
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %22, %20, %7
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i32 @tsd_nominal(i32*) #1

declare dso_local i32 @tsd_state_get(i32*) #1

declare dso_local i64 @tsd_local_slow(i32*) #1

declare dso_local i64 @tsd_global_slow(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
